2010-07-05   D. V. Wiebe <getdata@ketiltrout.net>   svn:427
	* test/eof_phase.c test/eof.c test/eof_lincom.c test/eof_index.c: Renamed
	from nsamples*.c
	* test/bof.c test/bof_lincom.c test/bof_phase.c: Added.

	* bindings/python/test/big_test.py bindings/cxx/test/big_test.cpp
	bindings/f77/test/big_test.f bindings/f77/test/big_test95.f90
	bindings/idl/test/big_test.pro: Add a new test 86 and also add test 142.

	* bindings/cxx/dirfile.cpp (Dirfile::EOF Dirfile::BOF): Added.
	* bindings/python/pydirfile.c (gdpy_dirfile_getbof gdpy_dirfile_geteof):
	Added.
	* bindings/f77/fgetdata.c (GDGBOF GDGEOF): Added.
	* bindings/f77/getdata.f90.in (fgd_get_bof fgd_get_eof): Added.
	* bindings/idl/getdata.c (gdidl_get_bof gdidl_get_eof): Added.

	* bindings/idl/makedlm.sh.in: Sort the subroutine list.

	* src/flimits.c (gd_get_bof gd_get_bof64 _GD_GetBOF): Added.
	* src/flimits.c (gd_get_eof gd_get_eof64 _GD_GetEOF): Renamed.  Proper INDEX
	handling added.

	* src/foffs.c src/flimits.c src/nsamples.c: fofds.c and nsamples.c merged
	and renamed flimits.c.

2010-06-30   D. V. Wiebe <getdata@ketiltrout.net>   svn:425 svn:426
	* test/nsamples.c test/nsamples_index.c test/nsamples_lincom.c
	test/nsamples_phase.c: Added.

	* src/nsamples.c: Added.

2010-06-30   D. V. Wiebe <getdata@ketiltrout.net>   svn:420
	* src/errors.c: Update for GD_E_BAD_VERSION and GD_E_FLUSH.
	* src/flush.c (_GD_FlushFragment): Replace GD_E_OPEN_INCLUDE errors with
	GD_E_FLUSH for more sensical error reporting.
	* src/getdata.h.in: Added GD_E_FLUSH.
	* src/internal.h: Added GD_E_FLUSH suberrors.

2010-06-30   D. V. Wiebe <getdata@ketiltrout.net>   svn:419
	* src/mod.c (_GD_SPFConvert): _GD_AddData is only used by _GD_Change to
	convert SPFs, so pare it down and rename.
	* src/common.c (_GD_AddData): Moved to src/mod.c and renamed _GD_SPFConvert.

2010-06-29   D. V. Wiebe <getdata@ketiltrout.net>   svn:418
	* m4/compiler.m4 (GD_CHECK_LFS_TYPE): Added.