@@ -1,80 +1,0 @@
-#ifdef HAVE_CONFIG_H
-#include "config.h"
-#undef GETDATA_LEGACY_API
-#endif
-
-#include "getdata/dirfile.h"
-#include <sys/stat.h>
-#include <sys/types.h>
-#include <stdlib.h>
-#include <stdio.h>
-#include <fcntl.h>
-#include <string.h>
-#include <errno.h>
-#include <unistd.h>
-
-#ifdef HAVE_IO_H
-#include <io.h>
-#endif
-
-#if MKDIR_NO_MODE
-#ifdef HAVE__MKDIR
-#define mkdir(f,m) _mkdir(f)
-#else
-#define mkdir(f,m) mkdir(f)
-#endif
-#endif
-#ifndef O_BINARY
-#define O_BINARY 0
-#endif
-
-using namespace GetData;
-
-int main(void)
-{
-  const char* filedir = __TEST__ "dirfile";
-  const char* format = __TEST__ "dirfile/format";
-  const char* data = __TEST__ "dirfile/data";
-  const char* format_data = "data RAW UINT8 8\n";
-  unsigned char c[8];
-  unsigned char data_data[256];
-  int fd, i, r = 0;
-
-  memset(c, 0, 8);
-  mkdir(filedir, 0777);
-
-  for (fd = 0; fd < 256; ++fd)
-    data_data[fd] = (unsigned char)fd;
-
-  fd = open(format, O_CREAT | O_EXCL | O_WRONLY, 0666);
-  write(fd, format_data, strlen(format_data));
-  close(fd);
-
-  fd = open(data, O_CREAT | O_EXCL | O_WRONLY | O_BINARY, 0666);
-  write(fd, data_data, 256);
-  close(fd);
-
-  Dirfile dirfile(filedir);
-  size_t n = dirfile.GetData("data", 5, 0, 1, 0, UInt8, c);
-  int error = dirfile.Error();
-
-  unlink(data);
-  unlink(format);
-  rmdir(filedir);
-
-  if (error) {
-    fprintf(stderr, "error = %i (expected 0)\n", error);
-    r = 1;
-  }
-  if (n != 8) {
-    fprintf(stderr, "n = %i (expected 8)\n", n);
-    r = 1;
-  }
-  for (i = 0; i < 8; ++i)
-    if (c[i] != 40 + i) {
-      fprintf(stderr, "c[%i] = %i (expected %i)\n", i, c[i], 40 + i);
-      r = 1;
-    }
-
-  return r;
-}
